--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -31,7 +31,6 @@ nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  text-align: center;
 }
 
 nav li {
@@ -98,4 +97,9 @@ textarea {
 p {
   display: inline-block;
   margin-right: 16px;
+}
+
+.comment {
+  border-bottom: 2px solid black;
+  padding: 16px;
 }
